--- a/index.html
+++ b/index.html
@@ -27,5 +27,30 @@
             <div class="image-placeholder">this is a placeholder for an image</div>
         </div>    
     </div>
+    <main>
+        <p class="information-header">Some random information.</p>
+        <div class="information-cards">
+            <div class="card">
+                <div class="image"></div>
+                <p class="caption">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="image"></div>
+                <p class="caption">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="image"></div>
+                <p class="caption">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="image"></div>
+                <p class="caption">this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+        <div class="quote-card">
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="byline">-Thor, God of Thunder</p>
+        </div>
+    </main>
 </body>
 </html>
