--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
             <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <p class="byline">-Thor, God of Thunder</p>
         </div>
+        <div class="sign-up-card">
+            <div class="sign-up-text">
+                <p class="bold">Call to action! It's time!</p>
+                <p>Sign up for our product by clicking that button right over time!</p>
+            </div>
+            <button class="blue-button">Sign up</button>
+        </div>
     </main>
+    <footer>
+        <p>Copyright © The Odin Project 2021</p>
+    </footer>
 </body>
 </html>
