--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </header>
         <div class="header-main">
             <div class="caption">
-                <p class="main-text">This website is awesome</p>
-                <p class="secondary-text">Ths website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <div class="main-text">This website is awesome</div>
+                <div class="secondary-text">Ths website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
                 <button class="blue-button">Sign up</button>
             </div>
             <div class="image-placeholder">this is a placeholder for an image</div>
