Style header's main body

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </header>
         <div class="header-main">
             <div class="caption">
-                <div class="main-text">This website is awesome</div>
+                <div class="header-main-text">This website is awesome</div>
                 <div class="secondary-text">Ths website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
                 <button class="blue-button">Sign up</button>
             </div>
