--- a/index.html
+++ b/index.html
@@ -28,33 +28,33 @@
         </div>    
     </div>
     <main>
-        <p class="information-header">Some random information.</p>
+        <div class="information-header">Some random information.</div>
         <div class="information-cards">
             <div class="card">
                 <div class="image"></div>
-                <p class="caption">this is some subtext under an illustration or image</p>
+                <div class="caption">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">
                 <div class="image"></div>
-                <p class="caption">this is some subtext under an illustration or image</p>
+                <div class="caption">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">
                 <div class="image"></div>
-                <p class="caption">this is some subtext under an illustration or image</p>
+                <div class="caption">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">
                 <div class="image"></div>
-                <p class="caption">this is some subtext under an illustration or image</p>
+                <div class="caption">this is some subtext under an illustration or image</div>
             </div>
         </div>
         <div class="quote-card">
-            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <p class="byline">-Thor, God of Thunder</p>
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="byline">-Thor, God of Thunder</div>
         </div>
         <div class="sign-up-card">
             <div class="sign-up-text">
-                <p class="bold">Call to action! It's time!</p>
-                <p>Sign up for our product by clicking that button right over time!</p>
+                <div class="bold">Call to action! It's time!</div>
+                <div>Sign up for our product by clicking that button right over time!</div>
             </div>
             <button class="blue-button">Sign up</button>
         </div>
